force-app/main/default/objects/Authorization__c/Authorization__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Authorization</label>
    <nameField>
        <displayFormat>Authorization-{0000}</displayFormat>
        <label>Authorization #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>