force-app/main/default/objects/Authorization__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Need pop-up reminder when authorizations are due</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>