force-app/main/default/objects/Authorization__c/fields/Grace_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period_Days__c</fullName>
    <label>Grace Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>