force-app/main/default/objects/Authorization__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADAP</fullName>
            </value>
            <value>
                <fullName>CARE_HIPP</fullName>
            </value>
            <value>
                <fullName>OA-HIPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>